# tackyplates

./: README.md
backend/: .gitignore  Dockerfile  Makefile  Readme.md  codegen.sh  docker-compose.codegen.yml  docker-compose.dev.yml  gen.Dockerfile  gunicorn.service  gunicorn.socket  manage.py  monitrc  nginx-site-config  pigpiod-monit  pigpiod-program-monit  pyproject.toml  requirements-rpi.txt  requirements.txt  restart.sh  seed.sh  setup.sh  start-mocked.sh  start.sh
backend/hardware/: hardware.py  measurer.py  measurer_mock.py
backend/hardware/ball_guide/: ball_guide.py  ball_guide_testing.py  servo_dummy.py  servo_dummy_via_class.py
backend/hardware/distance_sensor/: distance_sensor_class.py  distance_sensor_class_results.csv  distance_sensor_mock.py  distance_sensor_testing.py
backend/hardware/solenoid/: solenoid.py  solenoid_testing.py
backend/hardware/stepper_motor/: plate_mover.py  stepper.py  stepper_testing.py
backend/infra/: logger.py
backend/main/: admin.py  apps.py  models.py
backend/main/migrations/: 0001_initial.py  0002_rawmeasurement.py  0003_experiment_started_on.py  0004_remove_setting_measurement_width_and_more.py  0005_setting_experiment_gap_alter_setting_ball_diameter_and_more.py  0006_setting_solenoid_drop_time.py  0007_setting_board_length_and_more.py
backend/measurement/: measurementApi.py  updateTask.py
backend/seed/: 0001_Setting.json
backend/tackyplates/: asgi.py  calculator.py  settings.py  test_calculator.py  urls.py  wsgi.py
frontend/: Dockerfile  README.md  build.sh  licenses.html  nginx-monit  nginx-site-config  (+2 more)
(+14 files in other folders)
