[tool.poetry]
name = "tackyplates"
version = "0.1.0"
description = ""
authors = ["Matthias Hofmann, Wolfgang Ederer"]

[tool.poetry.dependencies]
python = "~3.9"
Django = "^4.0.1"
django-ninja = "^0.17.0"
APScheduler = "^3.8.1"
django-cors-headers = "^3.11.0"
pandas = "^1.5.0"
openpyxl = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
